--- a/redes2-web/index.html
+++ b/redes2-web/index.html
@@ -104,7 +104,8 @@
 
 			<footer>
 				<p>
-					Leonardo Wistuba de França
+					Leonardo Wistuba de França<br>
+					Lennon Alberto dos Santos
 				</p>
 			</footer>
 
