--- a/redes2-web/log.html
+++ b/redes2-web/log.html
@@ -312,7 +312,8 @@
 
             <footer>
                 <p>
-                    Leonardo Wistuba de França
+                    Leonardo Wistuba de França<br>
+                    Lennon Alberto dos Santos
                 </p>
             </footer>
 
