--- a/redes2-web/report.html
+++ b/redes2-web/report.html
@@ -44,13 +44,13 @@
                     <a class="brand" href="index.html">Trabalho Prático</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li >
+                            <li class="active">
                                 <a href="report.html">Relatório</a>
                             </li>
                             <li>
                                 <a href="source.html">Código Fonte</a>
                             </li>
-                            <li class="active">
+                            <li >
                                 <a href="log.html">Logs de Execução</a>
                             </li>
                         </ul>
@@ -274,9 +274,10 @@
                 <hr>
 
                 <footer>
-                    <p>
-                        Leonardo Wistuba de França
-                    </p>
+                <p>
+                    Leonardo Wistuba de França<br>
+                    Lennon Alberto dos Santos
+                </p>
                 </footer>
 
             </div>
