--- a/redes2-web/log.html
+++ b/redes2-web/log.html
@@ -77,242 +77,18 @@
                 </div>
                 <div class="span10">
                     <div>
-                        <h3>Log Cliente - Enviando: "enviando esse texto aqui para o servidor com 20% de perda"</h3>
-                        <#0>    <23:37:39.303510>   Iniciando transmissão</br>
-<#1>    <23:37:39.304098>   Enviei normalmente o 92</br>
-<#2>    <23:37:39.304769>   ACK do 92</br>
-<#3>    <23:37:39.304923>   Enviei normalmente o 93</br>
-<#4>    <23:37:39.305526>   ACK do 93</br>
-<#5>    <23:37:39.305679>   Enviando duplicado o: 94</br>
-<#6>    <23:37:39.306203>   Recebi um ack com 94</br>
-<#7>    <23:37:39.306305>   Enviei normalmente o 95</br>
-<#8>    <23:37:39.306803>   ACK do 95</br>
-<#9>    <23:37:39.306901>   Enviei normalmente o 96</br>
-<#10>   <23:37:39.307379>   ACK do 96</br>
-<#11>   <23:37:39.307475>   Enviei normalmente o 97</br>
-<#12>   <23:37:39.307950>   ACK do 97</br>
-<#13>   <23:37:39.308045>   Enviei normalmente o 98</br>
-<#14>   <23:37:39.308638>   ACK do 98</br>
-<#15>   <23:37:39.308792>   Enviei normalmente o 99</br>
-<#16>   <23:37:39.309434>   ACK do 99</br>
-<#17>   <23:37:39.309589>   Enviei normalmente o 100</br>
-<#18>   <23:37:39.310237>   ACK do 100</br>
-<#19>   <23:37:39.310434>   Enviei normalmente o 101</br>
-<#20>   <23:37:39.311120>   ACK do 101</br>
-<#21>   <23:37:39.311319>   Enviei normalmente o 102</br>
-<#22>   <23:37:39.312003>   ACK do 102</br>
-<#23>   <23:37:39.312201>   Enviei normalmente o 103</br>
-<#24>   <23:37:39.312929>   ACK do 103</br>
-<#25>   <23:37:39.313127>   Perdendo o pacote 104</br>
-<#26>   <23:37:39.313315>   Enviei pacote 105</br>
-<#27>   <23:37:39.313873>   NACK 104</br>
-<#28>   <23:37:39.314012>   Enviei normalmente o 104</br>
-<#29>   <23:37:39.314586>   ACK do 104</br>
-<#30>   <23:37:39.314722>   Enviando duplicado o: 105</br>
-<#31>   <23:37:39.315286>   Recebi um ack com 105</br>
-<#32>   <23:37:39.315419>   Perdendo o pacote 106</br>
-<#33>   <23:37:39.315566>   Enviei pacote 107</br>
-<#34>   <23:37:39.315935>   NACK 106</br>
-<#35>   <23:37:39.316061>   Enviei normalmente o 106</br>
-<#36>   <23:37:39.316710>   ACK do 106</br>
-<#37>   <23:37:39.316926>   Enviei normalmente o 107</br>
-<#38>   <23:37:39.317439>   ACK do 107</br>
-<#39>   <23:37:39.317627>   Enviei normalmente o 108</br>
-<#40>   <23:37:39.318086>   ACK do 108</br>
-<#41>   <23:37:39.318263>   Enviei normalmente o 109</br>
-<#42>   <23:37:39.318703>   ACK do 109</br>
-<#43>   <23:37:39.318873>   Perdendo o pacote 110</br>
-<#44>   <23:37:39.319048>   Enviei pacote 111</br>
-<#45>   <23:37:39.319453>   NACK 110</br>
-<#46>   <23:37:39.319672>   Enviei normalmente o 110</br>
-<#47>   <23:37:39.320121>   ACK do 110</br>
-<#48>   <23:37:39.320313>   Enviando duplicado o: 111</br>
-<#49>   <23:37:39.320812>   Recebi um ack com 111</br>
-<#50>   <23:37:39.321046>   Enviei normalmente o 112</br>
-<#51>   <23:37:39.321621>   ACK do 112</br>
-<#52>   <23:37:39.321830>   Enviei normalmente o 113</br>
-<#53>   <23:37:39.322295>   ACK do 113</br>
-<#54>   <23:37:39.322502>   Enviando duplicado o: 114</br>
-<#55>   <23:37:39.323013>   Recebi um ack com 114</br>
-<#56>   <23:37:39.323240>   Enviei normalmente o 115</br>
-<#57>   <23:37:39.323829>   ACK do 115</br>
-<#58>   <23:37:39.324053>   Enviei normalmente o 116</br>
-<#59>   <23:37:39.324581>   ACK do 116</br>
-<#60>   <23:37:39.324786>   Enviei normalmente o 117</br>
-<#61>   <23:37:39.325272>   ACK do 117</br>
-<#62>   <23:37:39.325495>   Perdendo o pacote 118</br>
-<#63>   <23:37:39.325670>   Enviei pacote 119</br>
-<#64>   <23:37:39.326187>   NACK 118</br>
-<#65>   <23:37:39.326333>   Enviando duplicado o: 118</br>
-<#66>   <23:37:39.326830>   Recebi um ack com 118</br>
-<#67>   <23:37:39.327075>   Enviei normalmente o 119</br>
-<#68>   <23:37:39.327640>   ACK do 119</br>
-<#69>   <23:37:39.327845>   Enviando duplicado o: 120</br>
-<#70>   <23:37:39.328373>   Recebi um ack com 120</br>
-<#71>   <23:37:39.328593>   Enviei normalmente o 121</br>
-<#72>   <23:37:39.329157>   ACK do 121</br>
-<#73>   <23:37:39.329346>   Enviando duplicado o: 122</br>
-<#74>   <23:37:39.329830>   Recebi um ack com 122</br>
-<#75>   <23:37:39.330051>   Enviei normalmente o 123</br>
-<#76>   <23:37:39.330601>   ACK do 123</br>
-<#77>   <23:37:39.330793>   Enviei normalmente o 124</br>
-<#78>   <23:37:39.331252>   ACK do 124</br>
-<#79>   <23:37:39.331444>   Enviei normalmente o 125</br>
-<#80>   <23:37:39.331909>   ACK do 125</br>
-<#81>   <23:37:39.332101>   Perdendo o pacote 126</br>
-<#82>   <23:37:39.332296>   Enviei pacote 127</br>
-<#83>   <23:37:39.332761>   NACK 126</br>
-<#84>   <23:37:39.332903>   Perdendo o pacote 126</br>
-<#85>   <23:37:39.333070>   Enviei pacote 127</br>
-<#86>   <23:37:39.333533>   NACK 126</br>
-<#87>   <23:37:39.333676>   Enviei normalmente o 126</br>
-<#88>   <23:37:39.334134>   ACK do 126</br>
-<#89>   <23:37:39.334322>   Enviei normalmente o 127</br>
-<#90>   <23:37:39.334788>   ACK do 127</br>
-<#91>   <23:37:39.334987>   Enviei normalmente o 128</br>
-<#92>   <23:37:39.335449>   ACK do 128</br>
-<#93>   <23:37:39.335648>   Enviei normalmente o 129</br>
-<#94>   <23:37:39.336107>   ACK do 129</br>
-<#95>   <23:37:39.336330>   Enviei normalmente o 130</br>
-<#96>   <23:37:39.336557>   
-                    </div>
-                    
-                    <div>
-                        <h3>Log do servidor recebendo um byte por vez para melhor simulação</h3>
-                        <#0>    <23:37:39.302955>   Recebi um pedido de transmissão</br>
-<#1>    <23:37:39.304434>   Pacote esperado: <92> Pacote Recebido <92></br>
-<#2>    <23:37:39.304637>   Recebi o pacote esperado enviei ack do 92</br>
-<#3>    <23:37:39.305196>   Pacote esperado: <93> Pacote Recebido <93></br>
-<#4>    <23:37:39.305394>   Recebi o pacote esperado enviei ack do 93</br>
-<#5>    <23:37:39.305954>   Pacote esperado: <94> Pacote Recebido <94></br>
-<#6>    <23:37:39.306155>   Recebi o pacote esperado enviei ack do 94</br>
-<#7>    <23:37:39.306272>   Pacote esperado: <95> Pacote Recebido <94></br>
-<#8>    <23:37:39.306337>   Ja tenho o 94</br>
-<#9>    <23:37:39.306562>   Pacote esperado: <95> Pacote Recebido <95></br>
-<#10>   <23:37:39.306762>   Recebi o pacote esperado enviei ack do 95</br>
-<#11>   <23:37:39.307141>   Pacote esperado: <96> Pacote Recebido <96></br>
-<#12>   <23:37:39.307343>   Recebi o pacote esperado enviei ack do 96</br>
-<#13>   <23:37:39.307716>   Pacote esperado: <97> Pacote Recebido <97></br>
-<#14>   <23:37:39.307916>   Recebi o pacote esperado enviei ack do 97</br>
-<#15>   <23:37:39.308318>   Pacote esperado: <98> Pacote Recebido <98></br>
-<#16>   <23:37:39.308508>   Recebi o pacote esperado enviei ack do 98</br>
-<#17>   <23:37:39.309064>   Pacote esperado: <99> Pacote Recebido <99></br>
-<#18>   <23:37:39.309304>   Recebi o pacote esperado enviei ack do 99</br>
-<#19>   <23:37:39.309864>   Pacote esperado: <100> Pacote Recebido <100></br>
-<#20>   <23:37:39.310107>   Recebi o pacote esperado enviei ack do 100</br>
-<#21>   <23:37:39.310749>   Pacote esperado: <101> Pacote Recebido <101></br>
-<#22>   <23:37:39.310990>   Recebi o pacote esperado enviei ack do 101</br>
-<#23>   <23:37:39.311633>   Pacote esperado: <102> Pacote Recebido <102></br>
-<#24>   <23:37:39.311873>   Recebi o pacote esperado enviei ack do 102</br>
-<#25>   <23:37:39.312553>   Pacote esperado: <103> Pacote Recebido <103></br>
-<#26>   <23:37:39.312799>   Recebi o pacote esperado enviei ack do 103</br>
-<#27>   <23:37:39.313453>   Pacote esperado: <104> Pacote Recebido <105></br>
-<#28>   <23:37:39.313612>   Fora de sequencia esperava 104 recebi 105</br>
-<#29>   <23:37:39.314304>   Pacote esperado: <104> Pacote Recebido <104></br>
-<#30>   <23:37:39.314547>   Recebi o pacote esperado enviei ack do 104</br>
-<#31>   <23:37:39.315004>   Pacote esperado: <105> Pacote Recebido <105></br>
-<#32>   <23:37:39.315247>   Recebi o pacote esperado enviei ack do 105</br>
-<#33>   <23:37:39.315405>   Pacote esperado: <106> Pacote Recebido <105></br>
-<#34>   <23:37:39.315514>   Ja tenho o 105</br>
-<#35>   <23:37:39.315644>   Pacote esperado: <106> Pacote Recebido <107></br>
-<#36>   <23:37:39.315747>   Fora de sequencia esperava 106 recebi 107</br>
-<#37>   <23:37:39.316344>   Pacote esperado: <106> Pacote Recebido <106></br>
-<#38>   <23:37:39.316581>   Recebi o pacote esperado enviei ack do 106</br>
-<#39>   <23:37:39.317199>   Pacote esperado: <107> Pacote Recebido <107></br>
-<#40>   <23:37:39.317371>   Recebi o pacote esperado enviei ack do 107</br>
-<#41>   <23:37:39.317867>   Pacote esperado: <108> Pacote Recebido <108></br>
-<#42>   <23:37:39.318019>   Recebi o pacote esperado enviei ack do 108</br>
-<#43>   <23:37:39.318491>   Pacote esperado: <109> Pacote Recebido <109></br>
-<#44>   <23:37:39.318636>   Recebi o pacote esperado enviei ack do 109</br>
-<#45>   <23:37:39.319127>   Pacote esperado: <110> Pacote Recebido <111></br>
-<#46>   <23:37:39.319251>   Fora de sequencia esperava 110 recebi 111</br>
-<#47>   <23:37:39.319910>   Pacote esperado: <110> Pacote Recebido <110></br>
-<#48>   <23:37:39.320055>   Recebi o pacote esperado enviei ack do 110</br>
-<#49>   <23:37:39.320552>   Pacote esperado: <111> Pacote Recebido <111></br>
-<#50>   <23:37:39.320742>   Recebi o pacote esperado enviei ack do 111</br>
-<#51>   <23:37:39.320981>   Pacote esperado: <112> Pacote Recebido <111></br>
-<#52>   <23:37:39.321179>   Ja tenho o 111</br>
-<#53>   <23:37:39.321384>   Pacote esperado: <112> Pacote Recebido <112></br>
-<#54>   <23:37:39.321556>   Recebi o pacote esperado enviei ack do 112</br>
-<#55>   <23:37:39.322049>   Pacote esperado: <113> Pacote Recebido <113></br>
-<#56>   <23:37:39.322232>   Recebi o pacote esperado enviei ack do 113</br>
-<#57>   <23:37:39.322737>   Pacote esperado: <114> Pacote Recebido <114></br>
-<#58>   <23:37:39.322944>   Recebi o pacote esperado enviei ack do 114</br>
-<#59>   <23:37:39.323195>   Pacote esperado: <115> Pacote Recebido <114></br>
-<#60>   <23:37:39.323392>   Ja tenho o 114</br>
-<#61>   <23:37:39.323586>   Pacote esperado: <115> Pacote Recebido <115></br>
-<#62>   <23:37:39.323764>   Recebi o pacote esperado enviei ack do 115</br>
-<#63>   <23:37:39.324322>   Pacote esperado: <116> Pacote Recebido <116></br>
-<#64>   <23:37:39.324514>   Recebi o pacote esperado enviei ack do 116</br>
-<#65>   <23:37:39.325013>   Pacote esperado: <117> Pacote Recebido <117></br>
-<#66>   <23:37:39.325209>   Recebi o pacote esperado enviei ack do 117</br>
-<#67>   <23:37:39.325751>   Pacote esperado: <118> Pacote Recebido <119></br>
-<#68>   <23:37:39.325959>   Fora de sequencia esperava 118 recebi 119</br>
-<#69>   <23:37:39.326575>   Pacote esperado: <118> Pacote Recebido <118></br>
-<#70>   <23:37:39.326760>   Recebi o pacote esperado enviei ack do 118</br>
-<#71>   <23:37:39.326997>   Pacote esperado: <119> Pacote Recebido <118></br>
-<#72>   <23:37:39.327198>   Ja tenho o 118</br>
-<#73>   <23:37:39.327405>   Pacote esperado: <119> Pacote Recebido <119></br>
-<#74>   <23:37:39.327577>   Recebi o pacote esperado enviei ack do 119</br>
-<#75>   <23:37:39.328077>   Pacote esperado: <120> Pacote Recebido <120></br>
-<#76>   <23:37:39.328303>   Recebi o pacote esperado enviei ack do 120</br>
-<#77>   <23:37:39.328544>   Pacote esperado: <121> Pacote Recebido <120></br>
-<#78>   <23:37:39.328729>   Ja tenho o 120</br>
-<#79>   <23:37:39.328924>   Pacote esperado: <121> Pacote Recebido <121></br>
-<#80>   <23:37:39.329089>   Recebi o pacote esperado enviei ack do 121</br>
-<#81>   <23:37:39.329578>   Pacote esperado: <122> Pacote Recebido <122></br>
-<#82>   <23:37:39.329759>   Recebi o pacote esperado enviei ack do 122</br>
-<#83>   <23:37:39.329989>   Pacote esperado: <123> Pacote Recebido <122></br>
-<#84>   <23:37:39.330177>   Ja tenho o 122</br>
-<#85>   <23:37:39.330369>   Pacote esperado: <123> Pacote Recebido <123></br>
-<#86>   <23:37:39.330536>   Recebi o pacote esperado enviei ack do 123</br>
-<#87>   <23:37:39.331009>   Pacote esperado: <124> Pacote Recebido <124></br>
-<#88>   <23:37:39.331188>   Recebi o pacote esperado enviei ack do 124</br>
-<#89>   <23:37:39.331662>   Pacote esperado: <125> Pacote Recebido <125></br>
-<#90>   <23:37:39.331841>   Recebi o pacote esperado enviei ack do 125</br>
-<#91>   <23:37:39.332373>   Pacote esperado: <126> Pacote Recebido <127></br>
-<#92>   <23:37:39.332539>   Fora de sequencia esperava 126 recebi 127</br>
-<#93>   <23:37:39.333151>   Pacote esperado: <126> Pacote Recebido <127></br>
-<#94>   <23:37:39.333314>   Fora de sequencia esperava 126 recebi 127</br>
-<#95>   <23:37:39.333889>   Pacote esperado: <126> Pacote Recebido <126></br>
-<#96>   <23:37:39.334069>   Recebi o pacote esperado enviei ack do 126</br>
-<#97>   <23:37:39.334540>   Pacote esperado: <127> Pacote Recebido <127></br>
-<#98>   <23:37:39.334723>   Recebi o pacote esperado enviei ack do 127</br>
-<#99>   <23:37:39.335206>   Pacote esperado: <128> Pacote Recebido <128></br>
-<#100>  <23:37:39.335386>   Recebi o pacote esperado enviei ack do 128</br>
-<#101>  <23:37:39.335867>   Pacote esperado: <129> Pacote Recebido <129></br>
-<#102>  <23:37:39.336045>   Recebi o pacote esperado enviei ack do 129</br>
-<#103>  <23:37:39.336453>   Pacote esperado: <130> Pacote Recebido <130></br>
-<#104>  <23:37:39.336506>   Recebi o pacote esperado enviei ack do 130</br>
-<#105>  <23:37:39.336973>   Pacote esperado: <131> Pacote Recebido <131></br>
-<#106>  <23:37:39.337144>   Recebi o pacote esperado enviei ack do 131</br>
-<#107>  <23:37:39.337572>   Pacote esperado: <132> Pacote Recebido <133></br>
-<#108>  <23:37:39.337694>   Fora de sequencia esperava 132 recebi 133</br>
-<#109>  <23:37:39.338128>   Pacote esperado: <132> Pacote Recebido <132></br>
-<#110>  <23:37:39.338190>   Recebi o pacote esperado enviei ack do 132</br>
-<#111>  <23:37:39.338426>   Pacote esperado: <133> Pacote Recebido <133></br>
-<#112>  <23:37:39.338484>   Recebi o pacote esperado enviei ack do 133</br>
-<#113>  <23:37:39.338556>   Pacote esperado: <134> Pacote Recebido <133></br>
-<#114>  <23:37:39.338611>   Ja tenho o 133</br>
-<#115>  <23:37:39.338862>   Pacote esperado: <134> Pacote Recebido <134></br>
-<#116>  <23:37:39.338955>   Recebi o pacote esperado enviei ack do 134</br>
-<#117>  <23:37:39.339403>   Pacote esperado: <135> Pacote Recebido <135></br>
-<#118>  <23:37:39.339491>   Recebi o pacote esperado enviei ack do 135</br>
-<#119>  <23:37:39.339859>   Pacote esperado: <136> Pacote Recebido <136></br>
-<#120>  <23:37:39.340005>   Recebi o pacote esperado enviei ack do 136</br>
-<#121>  <23:37:39.340392>   Pacote esperado: <137> Pacote Recebido <137></br>
-<#122>  <23:37:39.340547>   Recebi o pacote esperado enviei ack do 137</br>
-<#123>  <23:37:39.340801>   Pacote esperado: <138> Pacote Recebido <138></br>
-<#124>  <23:37:
+                        <h3>Logs"</h3>
+                        <p>Logs para a execução do envio da mensagem "Perdendo e duplicando com 20 porcento" com 20% de perda e duplicação</p>
                     </div>
                    
                 </div>
+            </div>
 
             <hr>
 
             <footer>
                 <p>
-                    Leonardo Wistuba de França<br>
+                    Leonardo Wistuba de França</br>
                     Lennon Alberto dos Santos
                 </p>
             </footer>
