--- a/redes2-web/report.html
+++ b/redes2-web/report.html
@@ -263,6 +263,7 @@
                             Cada transmissão exige a instanciação de um novo objeto cliente.</br>
                             Todo o trabalho foi desenvolvido usando o IP 127.0.0.1, estava tudo hard-coded. Enfrentamos alguns problemas até percebermos que estávamos tentando fazer bind com o IP errado, for a isso, alguns problemas com identação...</br>
                             Consideramos a proposta e especificação de trabalho muito boas, foram de grande valia para nós. Aprendemos sobre cliente/servidor UDP e aproveitamos a oportunidade para descobrir Python!</br>
+                            O programa funciona nas servidoras do dinf mas encontramos problemas em detectar o nosso próprio ip em nossos computadores pessoais</br>
                             
 
                         </div>
